<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">T-Square Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_button_text">Login</string>
    <string name="title_activity_home_screen">Calendar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_logout">Logout</string>

    <!-- Assignment Activity Strings -->
    <string name="add_assignment">Add Assignment</string>
    <string name="action_add_assignment">Add Assignment</string>
    <string name="assignment_due_date">Assignment Due Date</string>

    <!-- Class Activity Strings -->
    <string name="title_activity_classes">Classes</string>
    <string name="title_section1">Announcements</string>
    <string name="title_section2">Assignments</string>
    <string name="title_section3">Grades</string>

    <string-array name="class_list">
        <item>Calendar</item>
        <item>ECE 6412</item>
        <item>CS 8803</item>
        <item>CS 4430</item>
        <item>ECE 4430</item>
        <item>MAS test site</item>
    </string-array>

    <!--
    <array name="nav_drawer_icons">
        <item>@drawable/ic_calendar</item>
        <item>@drawable/ic_class_icon</item>
        <item>@drawable/ic_class_icon</item>
        <item>@drawable/ic_class_icon</item>
        <item>@drawable/ic_class_icon</item>
        <item>@drawable/ic_class_icon</item>
        <item>@drawable/ic_class_icon</item>
        <item>@drawable/ic_class_icon</item>
        <item>@drawable/ic_class_icon</item>
        <item>@drawable/ic_class_icon</item>
        <item>@drawable/ic_class_icon</item>
        <item>@drawable/ic_class_icon</item>
        <item>@drawable/ic_class_icon</item>
    </array>
    -->


    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings Content -->
    <string name="notifications">Notifications</string>
    <string name="new_message_notifications">New Message Notifications</string>
    <string name="ringtone">Ringtone</string>
    <string name="vibrate">Vibrate</string>
    <string name="notification_reminder">Notification Reminder</string>

    <string-array name="frequency_titles_notifications">
        <item>1 day</item>
        <item>3 days</item>
        <item>5 days</item>
        <item>1 week</item>
        <item>2 weeks</item>
        <item>Never</item>
    </string-array>
    <string-array name="frequency_values_notifications">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>14</item>
        <item>-1</item>
    </string-array>

    <!--
    <string name="header_data_sync">Data &amp; sync</string>
    <string name="sync_frequency">Sync frequency</string>
    <string name="system_sync_settings">System sync settings</string> 

     <string-array name="frequency_titles_sync">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="frequency_values_sync">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    -->

    <string name="title_activity_add_assignments">AddAssignmentsActivity</string>

</resources>
