<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Settings">

  <PreferenceCategory
     android:title="@string/notifications">

    <!--
         A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked.
    -->
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/new_message_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/vibrate" />
    
    <ListPreference
        android:defaultValue="1"
                android:dependency="notifications_new_message"
        android:entries="@array/frequency_titles_notifications"
        android:entryValues="@array/frequency_values_notifications"
        android:key="notifications_notification_reminder"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/notification_reminder" />
    
  </PreferenceCategory>

  <!-- <PreferenceCategory
     android:title="@string/sync_frequency">  -->
    
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--  <ListPreference
        android:defaultValue="180"
        android:entries="@array/frequency_titles_sync"
        android:entryValues="@array/frequency_values_sync"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/sync_frequency" />

  </PreferenceCategory> -->

</PreferenceScreen>